# AAAI

./: .gitignore  LICENSE  README.md  build.bat  build.py  clipboard_manager.py  config_example.json  email_sender.py  keyboard_listener.py  llm_manager.py  main.py  pyproject.toml  requirements.txt  screenshot.py  web_server.py
static/: script.js  style.css
templates/: index.html
